ffxiv-tracker/src/snapshots/ffxiv_tracker__profile__test__yov_ziv.snap
---
source: ffxiv-tracker/src/profile.rs
expression: "Profile::parse(profile.id, profile_html, jobs_html)?"
---
Profile {
    user_id: 38598907,
    free_company: Some(
        "Phoenix Crusaders",
    ),
    name: "Yov Ziv",
    nameday: "6th Sun of the 2nd Umbral Moon",
    guardian: "Azeyma, the Warden",
    city_state: "Gridania",
    server: "Exodus [Primal]",
    race: "Viera",
    clan: "Veena",
    gender: "♀",
    grand_company: Some(
        "Maelstrom",
    ),
    grand_company_rank: Some(
        "Storm Captain",
    ),
    hp: 113363,
    mp: 10000,
    jobs: PlayerJobSnapshot(
        {
            Paladin: JobSnapshot {
                job: Paladin,
                level: Some(
                    90,
                ),
                exp: None,
            },
            Warrior: JobSnapshot {
                job: Warrior,
                level: Some(
                    90,
                ),
                exp: None,
            },
            DarkKnight: JobSnapshot {
                job: DarkKnight,
                level: Some(
                    90,
                ),
                exp: None,
            },
            Gunbreaker: JobSnapshot {
                job: Gunbreaker,
                level: Some(
                    90,
                ),
                exp: None,
            },
            WhiteMage: JobSnapshot {
                job: WhiteMage,
                level: Some(
                    90,
                ),
                exp: None,
            },
            Scholar: JobSnapshot {
                job: Scholar,
                level: Some(
                    90,
                ),
                exp: None,
            },
            Astrologian: JobSnapshot {
                job: Astrologian,
                level: Some(
                    90,
                ),
                exp: None,
            },
            Sage: JobSnapshot {
                job: Sage,
                level: Some(
                    90,
                ),
                exp: None,
            },
            Monk: JobSnapshot {
                job: Monk,
                level: Some(
                    71,
                ),
                exp: Some(
                    (
                        2047229,
                        3018000,
                    ),
                ),
            },
            Dragoon: JobSnapshot {
                job: Dragoon,
                level: Some(
                    55,
                ),
                exp: Some(
                    (
                        19354,
                        837000,
                    ),
                ),
            },
            Ninja: JobSnapshot {
                job: Ninja,
                level: Some(
                    60,
                ),
                exp: Some(
                    (
                        871126,
                        1387000,
                    ),
                ),
            },
            Samurai: JobSnapshot {
                job: Samurai,
                level: Some(
                    66,
                ),
                exp: Some(
                    (
                        1949350,
                        1968000,
                    ),
                ),
            },
            Reaper: JobSnapshot {
                job: Reaper,
                level: Some(
                    71,
                ),
                exp: Some(
                    (
                        1296273,
                        3018000,
                    ),
                ),
            },
            Bard: JobSnapshot {
                job: Bard,
                level: Some(
                    50,
                ),
                exp: Some(
                    (
                        105555,
                        421000,
                    ),
                ),
            },
            Machinist: JobSnapshot {
                job: Machinist,
                level: Some(
                    50,
                ),
                exp: Some(
                    (
                        173891,
                        421000,
                    ),
                ),
            },
            Dancer: JobSnapshot {
                job: Dancer,
                level: Some(
                    90,
                ),
                exp: None,
            },
            BlackMage: JobSnapshot {
                job: BlackMage,
                level: Some(
                    90,
                ),
                exp: None,
            },
            Summoner: JobSnapshot {
                job: Summoner,
                level: Some(
                    90,
                ),
                exp: None,
            },
            RedMage: JobSnapshot {
                job: RedMage,
                level: Some(
                    60,
                ),
                exp: Some(
                    (
                        432425,
                        1387000,
                    ),
                ),
            },
            BlueMage: JobSnapshot {
                job: BlueMage,
                level: Some(
                    61,
                ),
                exp: Some(
                    (
                        1082360,
                        1456000,
                    ),
                ),
            },
            Carpenter: JobSnapshot {
                job: Carpenter,
                level: Some(
                    77,
                ),
                exp: Some(
                    (
                        981317,
                        4377000,
                    ),
                ),
            },
            Armorer: JobSnapshot {
                job: Armorer,
                level: Some(
                    68,
                ),
                exp: Some(
                    (
                        1727468,
                        2317000,
                    ),
                ),
            },
            Blacksmith: JobSnapshot {
                job: Blacksmith,
                level: Some(
                    74,
                ),
                exp: Some(
                    (
                        2571149,
                        3532000,
                    ),
                ),
            },
            Goldsmith: JobSnapshot {
                job: Goldsmith,
                level: Some(
                    72,
                ),
                exp: Some(
                    (
                        1898768,
                        3153000,
                    ),
                ),
            },
            Leatherworker: JobSnapshot {
                job: Leatherworker,
                level: Some(
                    78,
                ),
                exp: Some(
                    (
                        1392265,
                        4777000,
                    ),
                ),
            },
            Weaver: JobSnapshot {
                job: Weaver,
                level: Some(
                    73,
                ),
                exp: Some(
                    (
                        2476633,
                        3324000,
                    ),
                ),
            },
            Alchemist: JobSnapshot {
                job: Alchemist,
                level: Some(
                    67,
                ),
                exp: Some(
                    (
                        914836,
                        2126000,
                    ),
                ),
            },
            Culinarian: JobSnapshot {
                job: Culinarian,
                level: Some(
                    90,
                ),
                exp: None,
            },
            Miner: JobSnapshot {
                job: Miner,
                level: Some(
                    87,
                ),
                exp: Some(
                    (
                        1539855,
                        9529000,
                    ),
                ),
            },
            Botanist: JobSnapshot {
                job: Botanist,
                level: Some(
                    90,
                ),
                exp: None,
            },
            Fisher: JobSnapshot {
                job: Fisher,
                level: Some(
                    75,
                ),
                exp: Some(
                    (
                        857296,
                        3770600,
                    ),
                ),
            },
        },
    ),
}
